--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lexington/starter",
+  "name": "@lexington/trendspotter",
   "type": "module",
   "version": "0.0.1",
   "private": true,
