--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^4.0.5",
+    "@astrojs/mdx": "^4.0.7",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.2.1",
     "@astrolib/seo": "^1.0.0-beta.8",
-    "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.13",
-    "astro": "^5.1.5",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
+    "astro": "^5.1.10",
     "tailwind-scrollbar-hide": "^2.0.0"
   },
   "devDependencies": {
-    "@tailwindcss/vite": "^4.0.0-beta.8",
-    "tailwindcss": "^4.0.0-beta.8"
+    "@tailwindcss/vite": "^4.0.0",
+    "tailwindcss": "^4.0.0"
   }
 }
